--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Home</title>
+		<title>Document</title>
 	</head>
-	<body style="background-color: black">
-		<div style="color: red">Привет программист!</div>
+	<body>
+		<div>Hello World</div>
 	</body>
 </html>
